--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 const config = {
  width: 960,
  height: 540,
+physics:{
+	default: 'arcade',
+	arcade: {
+		debug: true		
+	}
+},
+
  scene:{
  	preload: precarga,
 	create: crear,
@@ -21,12 +28,26 @@ const config = {
 const game = new Phaser.Game(config);
 
 let player;
-let player_speed = 10;
+let player_speed = 5;
 
 
 let enemies = [];
 let enemy_padding = 128;
-let enemies_pos = {}
+let enemies_pos = [
+
+	{x: enemy_padding, y: enemy_padding},	
+	{x: config.width/2, y: enemy_padding},	
+	{x:  config.width - enemy_padding, y: enemy_padding},	
+
+	{x: config.width - enemy_padding, y: config.height/2},	
+
+	{x: config.width - enemy_padding  , y: config.height - enemy_padding },	
+	{x: config.width/2, y: config.height - enemy_padding },	
+	{x: enemy_padding, y: config.height - enemy_padding },	
+
+	{x: enemy_padding, y: config.height/2 }	
+];
+
 
 let key_left;
 let key_right;
@@ -34,19 +55,32 @@ let key_up;
 let key_down;
 
 function precarga() {
-	
-	this.load.image("player-img", "player.png");
-
+	player = this.load.image("player-img", "player.png");
 }
 
 function crear() {
 
  player  = this.add.image (config.width/2,config.height/2, "player-img");
-
- for (let i = 0; i < enemies_pos.length;i++){
-	enemies.push(this.add.image(enemies_pos[i].x,enemies_pos[i].y, "player-img"));
- }
  
+ this.physics.add.existing(player,false);
+ player.body.setCollideWorldBounds(true);
+
+
+
+
+ for(let i = 0;i < enemies_pos.length;i++){
+	enemies.push(this.add.image (enemies_pos[i].x,enemies_pos[i].y,"player-img"));
+ 
+for (let i = 0; i < enemies.length;i++){
+this.physics.add.existing(enemies[i], false);
+enemies[i].body.setCollideWorldBounds(true);
+}
+
+
+
+}
+
+
  key_left = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.A);
  key_right = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.D);
  key_up = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.W);
@@ -70,11 +104,14 @@ if (key_up.isDown){
 
 else if(key_down.isDown){
 	player.y += player_speed;
-
-
 }
 
 
+for (let i = 0; i < enemies_pos.length; i++){
+	this.physics.moveToObject(enemies[i],player,50)
+}
+
+//console.log("X:",player.x,",","Y:",player.y);
 }
 
 </script>
