--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,9 @@ const game = new Phaser.Game(config);
 
 let player;
 let player_speed = 5;
+let weapon;
 
-
+let enemies_max = 28;
 let enemies = [];
 let enemy_padding = 128;
 let enemies_pos = [
@@ -55,30 +56,31 @@ let key_up;
 let key_down;
 
 function precarga() {
-	player = this.load.image("player-img", "player.png");
+	player = this.load.image("player-img", "imgs/player.png");
+	this.load.image("bg-img","imgs/background.png");
+	for(let i = 1; i <= enemies_max;i++){
+		this.load.image("enemy"+i, "imgs/enemy"+i+".png");
+	}
+
 }
 
 function crear() {
-
+let bg = this.add.image (config.width/2,config.height/2, "bg-img");
  player  = this.add.image (config.width/2,config.height/2, "player-img");
  
  this.physics.add.existing(player,false);
  player.body.setCollideWorldBounds(true);
 
 
+for (let i = 0; i < enemies_pos.length;i++){
+let enemy = "enemy"+Math.floor(Math.random()*enemies_max+1);
+let e = this.add.image(enemies_pos[i].x,enemies_pos[i].y,enemy)
+enemies.push(e);
 
-
- for(let i = 0;i < enemies_pos.length;i++){
-	enemies.push(this.add.image (enemies_pos[i].x,enemies_pos[i].y,"player-img"));
- 
-for (let i = 0; i < enemies.length;i++){
-this.physics.add.existing(enemies[i], false);
-enemies[i].body.setCollideWorldBounds(true);
+this.physics.add.existing(e,false);
+e.body.setCollideWorldBounds(true);
 }
 
-
-
-}
 
 
  key_left = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.A);
@@ -110,8 +112,6 @@ else if(key_down.isDown){
 for (let i = 0; i < enemies_pos.length; i++){
 	this.physics.moveToObject(enemies[i],player,50)
 }
-
-//console.log("X:",player.x,",","Y:",player.y);
 }
 
 </script>
